k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chiropractor
  labels:
    name: chiropractor
    app: chiropractor-system
