k8s/appointment-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-service
spec:
  selector:
    matchLabels:
      app: appointment-service
  replicas: 1
  template:
    metadata:
      labels:
        app: appointment-service
    spec:
      containers:
        - name: appointment-service
          image: appointment-service:latest
          ports:
            - containerPort: 3004
---
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
spec:
  selector:
    app: appointment-service
  ports:
    - port: 3004
      targetPort: 3004
