k8s/blog-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-service
spec:
  selector:
    matchLabels:
      app: blog-service
  replicas: 1
  template:
    metadata:
      labels:
        app: blog-service
    spec:
      containers:
        - name: blog-service
          image: blog-service:latest
          ports:
            - containerPort: 3006
---
apiVersion: v1
kind: Service
metadata:
  name: blog-service
spec:
  selector:
    app: blog-service
  ports:
    - port: 3006
      targetPort: 3006
