k8s/chat-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-service
spec:
  selector:
    matchLabels:
      app: chat-service
  replicas: 1
  template:
    metadata:
      labels:
        app: chat-service
    spec:
      containers:
        - name: chat-service
          image: chat-service:latest
          ports:
            - containerPort: 3005
---
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec:
  selector:
    app: chat-service
  ports:
    - port: 3005
      targetPort: 3005
